# xgifwallpaper

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
src/: lib.rs  macros.rs  main.rs  options.rs  placement.rs  position.rs  screen_info.rs  screens.rs  shm.rs  xatoms.rs  xcontext.rs
tests/: run-samples.sh
tests/samples/: run-samples.sh
