[package]
name = "xgifwallpaper"
version = "0.1.0"
authors = ["Frank Großgasteiger <frank@pixelgerecht.de>"]
edition = "2018"
links = "X11"
build = "build.rs"

[dependencies]
clap = "2.33.2"
ctrlc = "3.1.6"
gift = "0.9.1"
libc = "0.2.74"
pix = "0.13.1"
x11 = { git = "https://github.com/baist0/x11-rs.git" }

