[package]
authors = ["Frank Großgasteiger <frank@pixelgerecht.de>"]
build = "build.rs"
categories = ["command-line-utilities", "graphics"]
description = "Use an animated GIF as wallpaper on X11-systems"
edition = "2018"
homepage = "https://github.com/calculon102/xgifwallwaper"
keywords = ["cli", "x11", "wallpaper", "gif"]
license = "GPL-3.0"
links = "X11 Xinerama Xext"
name = "xgifwallpaper"
readme = "README.md"
repository = "https://github.com/calculon102/xgifwallpaper"
version = "0.4.0-alpha"

[lib]
name = "xgifwallpaper"
path = "src/lib.rs"

[[bin]]
name = "xgifwallpaper"
path = "src/main.rs"
doc = false

[dependencies]
clap = "2.33"
ctrlc = "3.2"
gift = "0.10"
libc = "0.2"
pix = "0.13"
resize = "0.5"
x11 = { git="https://github.com/calculon102/x11-rs/", branch="xshm" }

[features]
# Compiles test-cases, that require a real x11-server running in the same
# session.
x11-integration-tests = []

